--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Labyrinth</string>
+    <string name="start_over_text">
+        Back to the maze
+    </string>
+    <string name="exit_maze_text">
+        Enjoy freedom
+    </string>
+    <string name="player_dead_text">
+        You died...
+    </string>
+    <string name="player_exit_text">
+        You found the exit!
+    </string>
 </resources>
